--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "st7789_t-display.c"
-                    INCLUDE_DIRS "include")
+idf_component_register(SRCS "src/st7789_t-display.c"
+                    INCLUDE_DIRS "include"
+                    REQUIRES driver)
+
